--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <section class="expert" id="expert">
         <div class="title">
             <h2 class="titleText">Our Kitchen <span>E</span>xpert</h2>
-            <p>The best chef's of the world are here.</p>
+            <p>The best chefs of the world are here.</p>
         </div>
         <div class="content">
             <div class="box">
