--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     </section>
 
     <div class="copyText">
-        <p>Copyright © 2022 <a href="https://andremrks.carrd.co/" target="_blank">André Marques</a> All Right Reserved</p>
+        <p>Copyright © 2022 <a href="https://andremrks.github.io/social-links/" target="_blank">André Marques</a> All Right Reserved</p>
     </div>
 
     <script src="./script.js"></script>
